2003-10-24  Niklas Knutsson  <nq@altern.org>

	* remove llpow() as it only creates problems
	* __USE_XOPEN for strptime
	* Replace insert(0, 1, ...) with insert(begin(), 1, ...)
	* Fix ALL warnings
	* Ignore blanks in BIN(), OCT(), HEX(), BASE()
	* Fix number bases dialog

2003-10-23  Niklas Knutsson  <nq@altern.org>

	* Do not use scandir as Solaris does not support it
	* Access hash_map header properly
	* Update POTFILES.in for new glade files
	* Remove #include <ext/hash_map> from Calculator.h

2003-10-22  Niklas Knutsson  <nq@altern.org>

	* Split up glade file
	* minute -> min
	* Now function can have the same name as a unit or variable, but units and variables cannot have the same name

2003-10-21  Niklas Knutsson  <nq@altern.org>

	* Release Qalculate-GTK version 0.3
	* Disable convert in units dialog when no unit selected	
	* Revert fractional button to use combined fractional display, but treat it as normal fractional display for regular text
	* Draw parenthesis around not alone manager (not power) with childs in denominator
	* Add a bit more space behind italic text to not cut tall chars off
	* More drawing fixes

2003-10-20  Niklas Knutsson  <nq@altern.org>

	* Include all bytes in unicode char for unknown variables in setFunctionsAndVariables()
	* Fix Manager->print(), and as below
	* Display x^-y as 1/x^y in non-scientific mode
	* Draw multiplication manager fixes
	* Put menus before items
	* More TODO
	* Also add icon.xpm
	* Add qalculate.h to Makefile.am to get it included in dist
	* Accel fixes and additions
	* Move "convert number basis" to the other menu
	* Reorder some buttons to follow HIG
	* Make convert unit dialog non-modal

2003-10-19  Niklas Knutsson  <nq@altern.org>

	* Display ^0.5 as square root
	* Fix display of ugly -x^-0.5 (still ugly but no duplicate ones and spaces)
	* Stop display errors a bit more...

2003-10-18  Niklas Knutsson  <nq@altern.org>

	* Do not delete selection on sqrt button clicked but act as with the other functions